--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
-    <title>Título del post</title>
-</head>
-<body>
-    <h1>Aquí vamos a hacer un blogpost</h1>
-    <p>Y este es el párrafo de inicio</p>
-</body>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+        </head>
+        <body>
+        <div id="container">
+        <div id="cabecera">
+        Cabecera
+        </div>
+        <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        </div>
+        </div>
+        </body>
 </html>
