--- a/blogpost.html
+++ b/blogpost.html
@@ -5,14 +5,14 @@
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
         <body>
-        <div id="container">
-        <div id="cabecera">
-        Cabecera
-        </div>
-        <div id="post">
-        <h1>Este es el título atractivo e interesante del post</h1>
-        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-        </div>
+            <div id="container">
+                <div id="cabecera">
+                CABECERA
+                </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            </div>
         </div>
         </body>
 </html>
