--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Bienvenido a Hyperblog-ariel 2.0</title>
+        <title>Hyperblog-ariel 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
         <body>
